--- a/centrale/package.json
+++ b/centrale/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue2-leaflet": "0.0.58"
+    "vue2-leaflet": "0.0.58",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
