--- a/centrale/package.json
+++ b/centrale/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-d3": "^0.1.0",
     "vue2-leaflet": "0.0.58",
     "vuex": "^3.0.1"
   },
