--- a/sonde/package.json
+++ b/sonde/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "influx": "^5.0.0-alpha.4",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "socket.io": "^2.0.4"
   }
 }
